Fixed bug #47049 (SoapClient::__soapCall causes a segmentation fault)